corrected spelling and align previous guesses

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
     /* background-color: black; */
     border: 1px solid white;
     width: 40%;
-    height: 20%;
+    height: 30%;
     padding: 15px;
     display: none;
     flex-direction: column;
@@ -80,4 +80,16 @@ button{
 
 button:hover{
     cursor: pointer;
+}
+
+.previous-result-area{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.previous-result{
+    font-weight: bold;
+    margin-bottom: 10px;
 }
